Fixed font color on smaller screen

--- a/assets/css/mediaScreen_517-736px.css
+++ b/assets/css/mediaScreen_517-736px.css
@@ -472,7 +472,6 @@
     .modal-media-box p {
         margin-top: 10px;
         font-size: 0.95em;
-        color: #ccc;
     }
 
     .modal-links {
